Add 'date' field to Booking and refactor initialization
Included a 'date' field in the Booking model, updating related repositories and initialization classes accordingly. Changes ensure accurate and consistent activity-related data initialization and storage.